[package]
name = "netlink-socket"
version = "0.2.0"
authors = [ "Remy D. Farley <one-d-wide@protonmail.com>" ]
categories = [ "network-programming", "os", "api-bindings" ]
repository = "https://github.com/one-d-wide/netlink-bindings"
license = "GPL-2.0"
edition = "2021"

[[example]]
name = "wireguard-setup"
required-features = [ "netlink-bindings/wireguard", "netlink-bindings/rt-link", "netlink-bindings/rt-addr" ]

[[example]]
name = "conntrack"
required-features = [ "netlink-bindings/conntrack" ]

[[example]]
name = "extack"
required-features = [ "netlink-bindings/rt-link" ]

[features]
async = []
tokio = [ "async", "dep:tokio"]
smol = [ "async", "dep:smol", "dep:smol-macros", "dep:macro_rules_attribute" ]

[dependencies]
libc = "0.2"
netlink-bindings = { path = "../netlink-bindings", features = [ "nlctrl" ] }

maybe-async = { version = "0", features = [ "is_sync" ] }

tokio = { optional = true, version = "1", features = [ "net", "io-util", "rt", "macros" ] }

smol = { optional = true, version = "2", features = [ ] }
smol-macros = { optional = true, version = "0" }
macro_rules_attribute = { optional = true, version = "0", features = [ ] }
